force-app/main/default/objects/refedge__Reference_Content__c/refedge__Reference_Content__c.object-meta.xml
<CustomObject>
    <description>This object holds all the Custom Content.</description>
    <label>Reference Content</label>
    <nameField>
        <displayFormat>RC-{0000000000}</displayFormat>
        <label>Details</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reference Content</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>