force-app/main/default/objects/refedge__Reference_Content__c/fields/refedge__Data_Collector_Status__c.field-meta.xml
<CustomField>
    <fullName>refedge__Data_Collector_Status__c</fullName>
    <label>Data Collector Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Reviewed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>