force-app/main/default/objects/refedge__Reference_Content__c/fields/refedge__Number_of_Download__c.field-meta.xml
<CustomField>
    <fullName>refedge__Number_of_Download__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Count for each time a user clicks the [Download] button in RefSearch or on the Reference Content details page, downloads the content from Microsite Preview, or a recipient clicks the content and downloads it from the Microsite.</inlineHelpText>
    <label>Number of Downloads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>