force-app/main/default/objects/refedge__Reference_Content__c/fields/refedge__Ref_Content_Open_Clicks__c.field-meta.xml
<CustomField>
    <fullName>refedge__Ref_Content_Open_Clicks__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Specific to link type Reference Content. Count for each time the Open button is clicked from Ref Search, the &quot;Content Document&quot; [Open] button is clicked on the Ref Content Detail Page or the &quot;Content URL&quot; field is clicked from the Ref Content Detail page.</inlineHelpText>
    <label>Open Clicks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>