force-app/main/default/objects/refedge__Reference_Content__c/fields/refedge__Reference_Content_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>refedge__Reference_Content_Type_Name__c</fullName>
    <label>Reference Content Type Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>