force-app/main/default/objects/refedge__Reference_Content__c/listViews/refedge__All.listView-meta.xml
<ListView>
    <fullName>refedge__All</fullName>
    <columns>NAME</columns>
    <columns>refedge__Title__c</columns>
    <columns>refedge__Reference_Content_Type_f__c</columns>
    <columns>refedge__Reference_Content_Type_Name__c</columns>
    <columns>refedge__Content_File__c</columns>
    <columns>refedge__Content_Status__c</columns>
    <columns>refedge__Language__c</columns>
    <columns>refedge__Attributes__c</columns>
    <columns>refedge__Associated_Accounts__c</columns>
    <columns>refedge__Internal_Use__c</columns>
    <columns>refedge__Custom_Reference_Content__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>