force-app/main/default/objects/refedge__Reference_Content__c/listViews/refedge__All1.listView-meta.xml
<ListView>
    <fullName>refedge__All1</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>