force-app/main/default/objects/refedge__Reference_Content__c/listViews/refedge__ratings.listView-meta.xml
<ListView>
    <fullName>refedge__ratings</fullName>
    <columns>NAME</columns>
    <columns>refedge__Reference_Content_Type_Name__c</columns>
    <columns>refedge__Rating__c</columns>
    <columns>refedge__Number_of_Ratings__c</columns>
    <columns>refedge__Number_of_Invitations__c</columns>
    <columns>refedge__Number_of_Download__c</columns>
    <columns>refedge__Microsite_Clicks__c</columns>
    <columns>refedge__Title__c</columns>
    <filterScope>Everything</filterScope>
    <label>ratings</label>
</ListView>